fixed footer placement after fixing double scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,7 @@ body::before {
   border-radius: 20px;       /* roundness of the scroll thumb */
   /* border: 3px solid creates padding around scroll thumb */
 }
+
+#page-wrap {
+  margin-bottom: 100px;
+}
